--- a/lib/mainwindow.glade
+++ b/lib/mainwindow.glade
@@ -3,7 +3,7 @@
   <requires lib="gtk+" version="2.16"/>
   <!-- interface-naming-policy project-wide -->
   <object class="GtkWindow" id="window">
-    <property name="title" translatable="yes">LaTeX Presentation Maker</property>
+    <property name="title" translatable="yes">SlideDeX</property>
     <property name="default_width">800</property>
     <property name="default_height">600</property>
     <signal name="destroy" handler="on_window_destroy"/>
